--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
     
     <div class="col-md-4">
      <label for="Validation_first" class="form-label">First Name</label>
-     <input type="text" name="Validation_first" id="Validation_first" class="form-control" value="Faria" required>
+     <input type="text" name="Validation_first" id="Validation_first" class="form-control">
     </div>
      
     <div class="col-md-4">
      <label for="Validation_last" class="form-label">Last Name</label>
-     <input type="text" name="Validation_last" id="Validation_last" class="form-control" value="bijury" required>
+     <input type="text" name="Validation_last" id="Validation_last" class="form-control">
     </div>
    
    <div class="col-md-4">
@@ -96,6 +96,46 @@
   
   </form>
 
+<form class="row g-3">
+  
+  <div class="col-md-6">
+    <label for="f_name" class="form-label">First name</label>
+    <input type="text" class="form-control is-valid f_name" id="f_name" required>
+    <div class="valid-feedback">
+      Looks good!
+    </div>
+    <div id="validationServer03Feedback" class="invalid-feedback">
+      Please enter your First Name
+    </div>
+  </div>
+  
+  <div class="col-md-6">
+    <label for="validationServer02" class="form-label">Last name</label>
+    <input type="text" class="form-control is-valid" id="validationServer02">
+    <div class="valid-feedback">
+      Looks good!
+    </div>
+    <div id="validationServer03Feedback" class="invalid-feedback">
+      Please enter your First Name
+    </div>
+  </div>
+  
+  <div class="col-12">
+    <div class="form-check">
+      <input class="form-check-input is-invalid" type="checkbox" value="" id="invalidCheck3" aria-describedby="invalidCheck3Feedback" required>
+      <label class="form-check-label" for="invalidCheck3">
+        Agree to terms and conditions
+      </label>
+      <div id="invalidCheck3Feedback" class="invalid-feedback">
+        You must agree before submitting.
+      </div>
+    </div>
+  </div>
+  
+  <div class="col-12">
+    <button class="btn btn-primary" type="submit">Submit form</button>
+  </div>
+</form>
  
 
   
